--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/Mystyle.css">
+    <script src="js/default.js"></script>
 </head>
 <body>
     <h1>Hello World</h1>
+    <button class='btn btn-primary'>xxxx</button>
+    <img src="Img/IMG_9889.jpg"></img>
 </body>
 </html>
