--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="css/Mystyle.css">
     <script src="js/default.js"></script>
+
 </head>
 <body>
-    <h1>Hello World</h1>
-    <button class='btn btn-primary'>xxxx</button>
-    <img src="Img/IMG_9889.jpg"></img>
+    <div class="container">
+        <h1>Hello World</h1>
+        <button class='btn btn-primary'>xxxx</button>
+        <img src="img/IMG_9889.jpg" width="500px" alt="" srcset="">
+    </div>
+    <script>
+        $(()=>{
+            alert("Hello");
+        })
+    </script>
 </body>
 </html>
