--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="container">
         <center>
         <h1>Hello World</h1><br>
-        <img src="img/IMG_9889.jpg" width="350px" alt="" srcset="">
+        <img src="/Img/City-Life-4K-Wallpaper-3840x2160.jpg" width="350px" alt="" srcset="">
          <br>
         <br>
         <button class='btn btn-primary'><i class="fab fa-accessible-icon"></i></button>
             <button class='btn btn-primary'>xxxx</button>
             <br>
         </center>
-        
+
         
 
     </div>
